# xdelta

xdelta3/: CMakeLists.txt  xdelta3.h
